--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <div class="container">
   <div id="carousel" class="carousel">
     <div class="slides">
-      <div class="slide active">Slide 1</div>
-      <div class="slide">Slide 2</div>
-      <div class="slide">Slide 3</div>
-      <div class="slide">Slide 4</div>
-      <div class="slide">Slide 5</div>
+      <div class="slide active"></div>
+      <div class="slide"></div>
+      <div class="slide"></div>
+      <div class="slide"></div>
+      <div class="slide"></div>
     </div>
   </div>
   <div class="button">
-    <button id="prev"><===</button>
-    <button id="but">Pause</button>
-    <button id="next">===></button>
+    <button id="prev"><---</button>
+        <button id="but">Pause</button>
+        <button id="next">---></button>
   </div>
 </div>
 
