--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <div class="container">
   <div id="carousel" class="carousel">
     <div class="slides">
-      <div class="slide active"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
-      <div class="slide"></div>
+      <div class="slide active" style="background-image: url('assets/img/1.jpg')"></div>
+      <div class="slide" style="background-image: url('assets/img/2.jpg')"></div>
+      <div class="slide" style="background-image: url('assets/img/3.jpg')"></div>
+      <div class="slide" style="background-image: url('assets/img/4.jpg')"></div>
+      <div class="slide" style="background-image: url('assets/img/5.jpg')"></div>
     </div>
   </div>
   <div class="button">
