--- a/index.html
+++ b/index.html
@@ -20,23 +20,13 @@
       <div class="slide" style="background-image: url('assets/img/4.jpg')"></div>
       <div class="slide" style="background-image: url('assets/img/5.jpg')"></div>
     </div>
-    <div id="indicators-container" class="indicators">
-      <div class="indicator active" data-slide-to="0"></div>
-      <div class="indicator" data-slide-to="1"></div>
-      <div class="indicator" data-slide-to="2"></div>
-      <div class="indicator" data-slide-to="3"></div>
-      <div class="indicator" data-slide-to="4"></div>
-    </div>
-  </div>
-  <div class="button">
-    <button id="prev"><---</button>
-        <button id="but">Pause</button>
-        <button id="next">---></button>
   </div>
 
 </div>
 
-<script src="assets/js/app.js"></script>
+<script src="assets/js/carousel.js"></script>
+<script src="assets/js/swipe-carousel.js"></script>
+<script src="assets/js/index.js"></script>
 </body>
 
 </html>
