--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
 </div>
 
-<script src="assets/js/carousel.js"></script>
-<script src="assets/js/swipe-carousel.js"></script>
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.js" type="module"></script>
 </body>
 
 </html>
