--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -11,22 +11,21 @@
     rel="stylesheet">
   <title>Slider JS</title>
 </head>
-<div class="container">
-  <div id="carousel" class="carousel">
-    <div class="slides">
-      <div class="slide active" style="background-image: url('assets/img/1.jpg')"></div>
-      <div class="slide" style="background-image: url('assets/img/2.jpg')"></div>
-      <div class="slide" style="background-image: url('assets/img/3.jpg')"></div>
-      <div class="slide" style="background-image: url('assets/img/4.jpg')"></div>
-      <div class="slide" style="background-image: url('assets/img/5.jpg')"></div>
+
+<body>
+  <div class="container">
+    <div id="carousel" class="carousel">
+      <div class="slides">
+        <div class="slide active" style="background-image: url('assets/img/1.jpg')"></div>
+        <div class="slide" style="background-image: url('assets/img/2.jpg')"></div>
+        <div class="slide" style="background-image: url('assets/img/3.jpg')"></div>
+        <div class="slide" style="background-image: url('assets/img/4.jpg')"></div>
+        <div class="slide" style="background-image: url('assets/img/5.jpg')"></div>
+      </div>
     </div>
   </div>
 
-</div>
-
-<script src="assets/js/carousel.js"></script>
-<script src="assets/js/swipe-carousel.js"></script>
-<script src="assets/js/index.js"></script>
+  <script src="assets/js/carousel.js" type="module"></script>
 </body>
 
 </html>
